# rag-local

./: .gitignore  .safedep.yaml  LICENSE  README.md  debug_rag.py  llm_downloader.py  llm_manager.py  main.py  pyproject.toml  rag_local.py  test_model_selection.py
tests/: __init__.py  test_llm_manager.py
